Fix file names and configuration.

--- a/k8s/prometheus-federation/mlab-staging.yml
+++ b/k8s/prometheus-federation/mlab-staging.yml
@@ -5,6 +5,7 @@ PROMETHEUS_RAM: 42Gi
 PROMETHEUS_CPU: 10000m
 PROMETHEUS_VOLUME_SIZE: 400Gi
 EXTERNAL_IP: 35.185.76.159
+TLS_ISSUER: letsencrypt
 TLS_EMAIL: support@measurementlab.net
 TLS_IP: 35.196.34.1
 GITHUB_RECEIVER_INMEMORY: true
