--- a/k8s/prometheus-federation/deployments/cert-manager.yml
+++ b/k8s/prometheus-federation/deployments/cert-manager.yml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cert-manager-cainjector
-  namespace: "cert-manager"
+  namespace: default
   labels:
     app: cainjector
     app.kubernetes.io/name: cainjector
@@ -43,7 +43,7 @@ spec:
                 fieldPath: metadata.namespace
           resources:
             {}
-
+            
 
 ---
 # Source: cert-manager/templates/deployment.yaml
@@ -51,7 +51,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: cert-manager
-  namespace: "cert-manager"
+  namespace: default
   labels:
     app: cert-manager
     app.kubernetes.io/name: cert-manager
@@ -88,6 +88,8 @@ spec:
           - --v=2
           - --cluster-resource-namespace=$(POD_NAMESPACE)
           - --leader-election-namespace=kube-system
+          - --default-issuer-name={{TLS_ISSUER}}
+          - --default-issuer-kind=ClusterIssuer
           - --webhook-namespace=$(POD_NAMESPACE)
           - --webhook-ca-secret=cert-manager-webhook-ca
           - --webhook-serving-secret=cert-manager-webhook-tls
@@ -103,60 +105,3 @@ spec:
             requests:
               cpu: 10m
               memory: 32Mi
-
----
-# Source: cert-manager/templates/webhook-deployment.yaml
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: cert-manager-webhook
-  namespace: "cert-manager"
-  labels:
-    app: webhook
-    app.kubernetes.io/name: webhook
-    app.kubernetes.io/instance:  cert-manager
-    app.kubernetes.io/managed-by: Tiller
-    helm.sh/chart: cert-manager-v0.11.0
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: webhook
-      app.kubernetes.io/name: webhook
-      app.kubernetes.io/instance:  cert-manager
-      app.kubernetes.io/managed-by: Tiller
-  template:
-    metadata:
-      labels:
-        app: webhook
-        app.kubernetes.io/name: webhook
-        app.kubernetes.io/instance:  cert-manager
-        app.kubernetes.io/managed-by: Tiller
-        helm.sh/chart: cert-manager-v0.11.0
-      annotations:
-    spec:
-      serviceAccountName: cert-manager-webhook
-      containers:
-        - name: cert-manager
-          image: "quay.io/jetstack/cert-manager-webhook:v0.11.0"
-          imagePullPolicy: IfNotPresent
-          args:
-          - --v=2
-          - --secure-port=6443
-          - --tls-cert-file=/certs/tls.crt
-          - --tls-private-key-file=/certs/tls.key
-          env:
-          - name: POD_NAMESPACE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.namespace
-          resources:
-            {}
-
-          volumeMounts:
-          - name: certs
-            mountPath: /certs
-      volumes:
-      - name: certs
-        secret:
-          secretName: cert-manager-webhook-tls
