Add comments on top of each file.

--- a/k8s/prometheus-federation/deployments/cert-manager.yml
+++ b/k8s/prometheus-federation/deployments/cert-manager.yml
@@ -1,3 +1,6 @@
+# This file is part of https://github.com/jetstack/cert-manager/releases/download/v0.11.0/cert-manager-no-webhook.yaml.
+# The namespace has been changed to default to avoid issues with resources
+# created in the wrong order (e.g. a deployment is created before the namespace exists.)
 # Source: cert-manager/charts/cainjector/templates/deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
