--- a/k8s/prometheus-federation/customresourcedefinitions/cert-manager.yml
+++ b/k8s/prometheus-federation/customresourcedefinitions/cert-manager.yml
@@ -1,3 +1,6 @@
+# This file is part of https://github.com/jetstack/cert-manager/releases/download/v0.11.0/cert-manager-no-webhook.yaml.
+# The x-kubernetes-preserve-unknown-fields field has been removed to make it
+# compatible with Kubernetes < v1.16 without having to skip validation.
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
