--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -945,14 +945,14 @@ groups:
           label_replace(datatype:pusher_bytes_per_tarfile:increase24h offset 3d, "delay", "3d", "", ".*") or
           label_replace(datatype:pusher_bytes_per_tarfile:increase24h offset 5d, "delay", "5d", "", ".*") or
             label_replace(datatype:pusher_bytes_per_tarfile:increase24h offset 1w, "delay", "7d", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "ndt5", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "ndt5", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "switch", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "switch", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "tcpinfo", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "tcpinfo", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "service", "traceroute", "", ".*") or
-            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "service", "traceroute", "", ".*")
+            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "datatype", "ndt5", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "datatype", "ndt5", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "datatype", "switch", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "datatype", "switch", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "datatype", "tcpinfo", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "datatype", "tcpinfo", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c1", "", ".*"), "datatype", "traceroute", "", ".*") or
+            label_replace(label_replace(vector(0), "delay", "c2", "", ".*"), "datatype", "traceroute", "", ".*")
             ))
     for: 2h
     labels:
