Add reference to pusher dashboard

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -964,6 +964,7 @@ groups:
       summary: Test data volume today is less than 70% of nominal daily volume.
       description: Are machines online? Is data being collected? Is pusher working?
         Is mlab-ns working? A new rollout?
+      dashboard: https://grafana.mlab-oti.measurementlab.net/d/WnaxPZJZz
 
 # The node_exporter running on eb.measurementlab.net is down.
   - alert: NodeExporterOnEbDownOrMissing
