Update bqx queries for annotation rates and gardener parse times (#569)
* Rename annotation checking metric so it can be universal
* Check annotation rates for k8s platform datatypes
* Report reprocessing times for all datatypes
* Use new filename
* Name bq_gardener_parse_time_age_days metric name
* Update label to datatype

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1058,8 +1058,8 @@ groups:
 # disappear.
   - alert: NDT_AsnAnnotationRatioTooLowOrMissing
     expr: |
-      bq_ndt_annotation_asn_success / bq_ndt_annotation_total < 0.98
-        or absent(bq_ndt_annotation_asn_success / bq_ndt_annotation_total)
+      bq_annotation_asn_success / bq_annotation_total < 0.98
+        or absent(bq_annotation_asn_success / bq_annotation_total)
     for: 30m
     labels:
       repo: dev-tracker
@@ -1070,12 +1070,12 @@ groups:
         deployments. The daily and batch parsers may also be affected.
 
 # NDT_GeoAnnotationRatioTooLowOrMissing fires when the client annotations on NDT
-# tests appears to have too many failures or the bq_ndt_annotation_* metrics
+# tests appears to have too many failures or the bq_annotation_* metrics
 # disappear.
   - alert: NDT_GeoAnnotationRatioTooLowOrMissing
     expr: |
-      bq_ndt_annotation_geo_success / bq_ndt_annotation_total < 0.98
-        or absent(bq_ndt_annotation_geo_success / bq_ndt_annotation_total)
+      bq_annotation_geo_success / bq_annotation_total < 0.98
+        or absent(bq_annotation_geo_success / bq_annotation_total)
     for: 30m
     labels:
       repo: dev-tracker
@@ -1087,11 +1087,11 @@ groups:
 
 # Gardener_ParseTimeDifferenceTooOldOrMissing fires when the maximum and minimum
 # parse_time values for each data set are greater than 80 days or the
-# bq_gardener_parse_time_difference_days metrics disappear.
+# bq_gardener_parse_time_age_days metrics disappear.
   - alert: Gardener_ParseTimeDifferenceTooOldOrMissing
     expr: |
-      bq_gardener_parse_time_difference_days > 80
-        or absent(bq_gardener_parse_time_difference_days)
+      bq_gardener_parse_time_age_days > 80
+        or absent(bq_gardener_parse_time_age_days)
     for: 10m
     labels:
       repo: dev-tracker
