--- a/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-staging.yml.template
+++ b/config/federation/grafana/provisioning/datasources/platform-cluster_mlab-staging.yml.template
@@ -8,7 +8,10 @@ datasources:
   type: prometheus
   access: proxy
   orgId: 1
-  url: http://prometheus-platform-cluster.mlab-staging.measurementlab.net:9090
+  url: https://prometheus-platform-cluster.mlab-staging.measurementlab.net
+  basicAuth: true
+  basicAuthUser: {{PLATFORM_PROM_AUTH_USER}}
+  basicAuthPassword: {{PLATFORM_PROM_AUTH_PASS}} 
   isDefault: {{IS_DEFAULT}}
   version: 1
   editable: false
