Import node_systemd_* metrics from platform cluster prometheus.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -332,6 +332,9 @@ scrape_configs:
         - 'collectd_mlab_success'
         # Used by PlatformCluster_PusherDailyDataVolumeTooLow alert.
         - 'datatype:pusher_bytes_per_tarfile:increase24h'
+        # Systemd metrics
+        - 'node_systemd_units'
+        - 'node_systemd_unit_state'
     static_configs:
       - targets: ['prometheus-platform-cluster.{{PROJECT}}.measurementlab.net:9090']
         labels:
