--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -305,8 +305,8 @@ scrape_configs:
       'match[]':
         - 'up{job=~".+"}'
         - 'lame_duck_experiment{job!="node-exporter"}'
-        - 'node_filesystem_size_bytes{deployment="node-exporter", mountpoint="/cache/data"}'
-        - 'node_filesystem_avail_bytes{deployment="node-exporter", mountpoint="/cache/data"}'
+        - 'node_filesystem_size_bytes{deployment="node-exporter"}'
+        - 'node_filesystem_avail_bytes{deployment="node-exporter"}'
         - 'node_memory_MemTotal_bytes'
         - 'node_edac_correctable_errors_total'
         - 'node_edac_uncorrectable_errors_total'
