Updates Docker images for many services, as well as updating API versions for many k8s objects.

--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -28,6 +28,7 @@ alerting:
     - static_configs:
       - targets:
         - alertmanager-service.default.svc.cluster.local:9093
+      api_version: v2
 
 # Scrape configurations.
 #
