--- a/k8s/prometheus-federation/roles/rbac-prometheus.yml
+++ b/k8s/prometheus-federation/roles/rbac-prometheus.yml
@@ -1,5 +1,5 @@
 # Add a cluster role for access to the v1.6 node/metrics resource.
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: prometheus
@@ -24,7 +24,7 @@ metadata:
 ---
 # Bind the cluster role above to the service account, granting this account
 # permission to the resources defined by the role.
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: prometheus
