--- a/k8s/prometheus-federation/deployments/alertmanager.yml
+++ b/k8s/prometheus-federation/deployments/alertmanager.yml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: alertmanager-server
@@ -29,7 +29,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/alertmanager/tags/ for the current
       # stable version.
-      - image: prom/alertmanager:v0.15.2
+      - image: prom/alertmanager:v0.19.0
         name: alertmanager-server
         env:
         - name: ALERTMANAGER_EXTERNAL_URL
