--- a/k8s/prometheus-federation/deployments/blackbox.yml
+++ b/k8s/prometheus-federation/deployments/blackbox.yml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: blackbox-server
@@ -45,7 +45,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/blackbox-exporter/tags/ for the current
       # stable version.
-      - image: prom/blackbox-exporter:v0.11.0
+      - image: prom/blackbox-exporter:v0.16.0
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
