--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: prometheus-server
@@ -46,7 +46,7 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v2.12.0
+      - image: prom/prometheus:v2.14.0
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
@@ -114,11 +114,45 @@ spec:
       # Run a node-exporter as part of the prometheus-server pod so that it has
       # access to the same namespace and volumes as the prometheus-server. This
       # allows simple disk usage monitoring of the "/prometheus" mount point.
-      - image: prom/node-exporter:v0.13.0
+      - image: prom/node-exporter:v0.18.1
         name: node-exporter
         # Note: only enable the filesystem collector, and ignore system paths.
-        args: [ "--collectors.enabled=filesystem",
-                "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)"]
+        args: [
+          "--no-collector.arp",
+          "--no-collector.bcache",
+          "--no-collector.bonding",
+          "--no-collector.conntrack",
+          "--no-collector.cpu",
+          "--no-collector.cpufreq",
+          "--no-collector.diskstats",
+          "--no-collector.edac",
+          "--no-collector.entropy",
+          "--no-collector.filefd",
+          "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)",
+          "--no-collector.hwmon",
+          "--no-collector.infiniband",
+          "--no-collector.ipvs",
+          "--no-collector.loadavg",
+          "--no-collector.mdadm",
+          "--no-collector.meminfo",
+          "--no-collector.netclass",
+          "--no-collector.netdev",
+          "--no-collector.netstat",
+          "--no-collector.nfs",
+          "--no-collector.nfsd",
+          "--no-collector.pressure",
+          "--no-collector.schedstat",
+          "--no-collector.sockstat",
+          "--no-collector.stat",
+          "--no-collector.textfile",
+          "--no-collector.thermal_zone",
+          "--no-collector.time",
+          "--no-collector.timex",
+          "--no-collector.uname",
+          "--no-collector.vmstat",
+          "--no-collector.xfs",
+          "--no-collector.zfs",
+        ],
         ports:
           - containerPort: 9100
         resources:
@@ -186,7 +220,7 @@ spec:
 
       # Check https://hub.docker.com/r/jimmidyson/configmap-reload/tags/ for the current
       # stable version.
-      - image: jimmidyson/configmap-reload:v0.2.2
+      - image: jimmidyson/configmap-reload:v0.3.0
         name: configmap-reload
         args: ["-webhook-url", "http://prometheus-service.default.svc.cluster.local:9090/-/reload",
                "-volume-dir", "/prometheus-config"]
