--- a/k8s/prometheus-federation/roles/rbac-external-dns.yml
+++ b/k8s/prometheus-federation/roles/rbac-external-dns.yml
@@ -1,6 +1,6 @@
 # A ClusterRole allowing external-dns to watch for new services and ingresses
 # with domains to add to the zone.
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: external-dns
@@ -30,7 +30,7 @@ metadata:
   namespace: default
 ---
 # Binding the external-dns ClusterRole to the ServiceAccount above.
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: external-dns-viewer
