--- a/k8s/prometheus-federation/services/gmx-tls-service.yml
+++ b/k8s/prometheus-federation/services/gmx-tls-service.yml
@@ -17,7 +17,7 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Ingress
 metadata:
   name: gmx-tls
