--- a/k8s/prometheus-federation/deployments/kube-state-metrics.yml
+++ b/k8s/prometheus-federation/deployments/kube-state-metrics.yml
@@ -4,6 +4,9 @@ metadata:
   name: kube-state-metrics
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: kube-state-metrics
   template:
     metadata:
       labels:
