--- a/k8s/prometheus-federation/deployments/mlabns-stackdriver.yml
+++ b/k8s/prometheus-federation/deployments/mlabns-stackdriver.yml
@@ -4,6 +4,9 @@ metadata:
   name: mlabns-stackdriver
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      run: mlabns-stackdriver
   template:
     metadata:
       labels:
