Adds missing selector configuration to external-dns deployment.

--- a/k8s/prometheus-federation/deployments/external-dns.yml
+++ b/k8s/prometheus-federation/deployments/external-dns.yml
@@ -8,6 +8,9 @@ metadata:
 spec:
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: external-dns
   template:
     metadata:
       labels:
