Removes comma from last element in args list.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -151,7 +151,7 @@ spec:
           "--no-collector.uname",
           "--no-collector.vmstat",
           "--no-collector.xfs",
-          "--no-collector.zfs",
+          "--no-collector.zfs"
         ],
         ports:
           - containerPort: 9100
