Indents args list like others in the file, and removes incorrect trailing comma from closing square bracket for list.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -117,42 +117,40 @@ spec:
       - image: prom/node-exporter:v0.18.1
         name: node-exporter
         # Note: only enable the filesystem collector, and ignore system paths.
-        args: [
-          "--no-collector.arp",
-          "--no-collector.bcache",
-          "--no-collector.bonding",
-          "--no-collector.conntrack",
-          "--no-collector.cpu",
-          "--no-collector.cpufreq",
-          "--no-collector.diskstats",
-          "--no-collector.edac",
-          "--no-collector.entropy",
-          "--no-collector.filefd",
-          "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)",
-          "--no-collector.hwmon",
-          "--no-collector.infiniband",
-          "--no-collector.ipvs",
-          "--no-collector.loadavg",
-          "--no-collector.mdadm",
-          "--no-collector.meminfo",
-          "--no-collector.netclass",
-          "--no-collector.netdev",
-          "--no-collector.netstat",
-          "--no-collector.nfs",
-          "--no-collector.nfsd",
-          "--no-collector.pressure",
-          "--no-collector.schedstat",
-          "--no-collector.sockstat",
-          "--no-collector.stat",
-          "--no-collector.textfile",
-          "--no-collector.thermal_zone",
-          "--no-collector.time",
-          "--no-collector.timex",
-          "--no-collector.uname",
-          "--no-collector.vmstat",
-          "--no-collector.xfs",
-          "--no-collector.zfs"
-        ],
+        args: ["--no-collector.arp",
+               "--no-collector.bcache",
+               "--no-collector.bonding",
+               "--no-collector.conntrack",
+               "--no-collector.cpu",
+               "--no-collector.cpufreq",
+               "--no-collector.diskstats",
+               "--no-collector.edac",
+               "--no-collector.entropy",
+               "--no-collector.filefd",
+               "--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($|/)",
+               "--no-collector.hwmon",
+               "--no-collector.infiniband",
+               "--no-collector.ipvs",
+               "--no-collector.loadavg",
+               "--no-collector.mdadm",
+               "--no-collector.meminfo",
+               "--no-collector.netclass",
+               "--no-collector.netdev",
+               "--no-collector.netstat",
+               "--no-collector.nfs",
+               "--no-collector.nfsd",
+               "--no-collector.pressure",
+               "--no-collector.schedstat",
+               "--no-collector.sockstat",
+               "--no-collector.stat",
+               "--no-collector.textfile",
+               "--no-collector.thermal_zone",
+               "--no-collector.time",
+               "--no-collector.timex",
+               "--no-collector.uname",
+               "--no-collector.vmstat",
+               "--no-collector.xfs",
+               "--no-collector.zfs"]
         ports:
           - containerPort: 9100
         resources:
