Changes kind back to extensions/v1beta1 for Ingresses, as apps/v1 is invalid.

--- a/k8s/prometheus-federation/services/gmx-tls-service.yml
+++ b/k8s/prometheus-federation/services/gmx-tls-service.yml
@@ -17,7 +17,7 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: gmx-tls
