--- a/k8s/prometheus-federation/services/reboot-api-tls-service.yml
+++ b/k8s/prometheus-federation/services/reboot-api-tls-service.yml
@@ -15,7 +15,7 @@ spec:
   sessionAffinity: None
   type: NodePort
 ---
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: reboot-api-tls
