Updates deprecated prometheus flag to new name.

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -54,7 +54,7 @@ spec:
         # Note: Set retention time to 120 days. (default retention is 30d).
         args: ["--config.file=/etc/prometheus/prometheus.yml",
                "--storage.tsdb.path=/prometheus",
-               "--storage.tsdb.retention=2880h",
+               "--storage.tsdb.retention.time=2880h",
                "--web.enable-lifecycle",
                "--web.external-url=https://prometheus.{{GCLOUD_PROJECT}}.measurementlab.net"]
         ports:
