Updates many Docker image versions and k8s API versions (#585)
* Updates Docker images for many services, as well as updating API versions for many k8s objects.

* Adds missing selector configurations for various deployments.

* Adds missing selector configuration to external-dns deployment.

* Removes comma from last element in args list.

* Indents args list like others in the file, and removes incorrect trailing comma from closing square bracket for list.

* Changes kind back to extensions/v1beta1 for Ingresses, as apps/v1 is invalid.

* Removes schedstat collector negations (documentation says it exists, but it doesn't).

* Removes thermal_zone collector negations (documentation says it exists, but it doesn't on this machine).

* Removes the legacy neubot BBE modules, as well as the rsyncd module.

* Updates deprecated prometheus flag to new name.

* Replaces newline at end of file.

--- a/k8s/prometheus-federation/deployments/node-exporter.yml
+++ b/k8s/prometheus-federation/deployments/node-exporter.yml
@@ -1,8 +1,11 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: node-exporter
 spec:
+  selector:
+    matchLabels:
+      run: node-exporter
   template:
     metadata:
       name: node-exporter
