--- a/k8s/data-processing-cluster/deployments/prometheus.yml
+++ b/k8s/data-processing-cluster/deployments/prometheus.yml
@@ -55,14 +55,14 @@ spec:
       containers:
       # Check https://hub.docker.com/r/prom/prometheus/tags/ for the current
       # stable version.
-      - image: prom/prometheus:v2.4.2
+      - image: prom/prometheus:v2.14.0
         # Note: the container name appears to be ignored and the actual pod name
         # is derived from the Deployment.metadata.name. However, removing this
         # value results in a configuration error.
         name: prometheus
         # Note: Set retention time to 60 days. (default retention is 15d).
         args: ["--config.file=/etc/prometheus/prometheus.yml",
-               "--storage.tsdb.retention=1440h",
+               "--storage.tsdb.retention.time=1440h",
                "--storage.tsdb.path=/data",
                "--web.enable-lifecycle"]
         ports:
