Sets alert severity=page on only the most critical alerts, the rest are tickets.

--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -68,7 +68,7 @@ groups:
     for: 5m
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Neither of the last two attempts to download the maxmind or
         routeviews feeds were successful.
@@ -110,7 +110,7 @@ groups:
     for: 30m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Expected SNMP metrics are missing from Prometheus!
       description: >
@@ -131,7 +131,7 @@ groups:
     for: 2h
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Prometheus is unable to scrape SNMP metrics from a switch.
       description: >
@@ -148,7 +148,7 @@ groups:
       count(up{job="snmp-targets",site!~".*t$"}) > 0.2
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: More than 20% of reachable switches are not providing SNMP metrics.
       description: >
@@ -185,7 +185,7 @@ groups:
     for: 30m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Expected script_exporter metrics are missing from Prometheus!
       description: >
@@ -257,7 +257,7 @@ groups:
     for: 10m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Less than 90% of ndt experiments are online according to mlab-ns.
       description: Make sure that the kubernetes ndt DaemonSet is healthy. Also
@@ -285,7 +285,7 @@ groups:
     for: 10m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Less than 75% of ndt_ipv6 experiments are online according to mlab-ns.
       description: Make sure that the kubernetes ndt DaemonSet is healthy. Also
@@ -313,7 +313,7 @@ groups:
     for: 10m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Less than 90% of ndt_ssl experiments are online according to mlab-ns.
       description: Make sure that the kubernetes ndt DaemonSet is healthy. Also
@@ -340,7 +340,7 @@ groups:
     for: 10m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Less than 75% of ndt_ssl_ipv6 experiments are online according to mlab-ns.
       description: Make sure that the kubernetes ndt DaemonSet is healthy. Also
@@ -361,7 +361,7 @@ groups:
     for: 2m
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Server-side errors rate for mlab-ns is over 1%.
       description: Stackdriver reports more than 1% of the HTTP requests to mlab-ns are
@@ -377,7 +377,7 @@ groups:
     for: 1m
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Server-side errors rate for rate-limiter is not zero.
       description: Stackdriver reports some of the HTTP requests to
@@ -438,7 +438,7 @@ groups:
     for: 30m
     labels:
       repo: ops-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: A metric for an NDT service is missing.
       description: >
@@ -563,7 +563,7 @@ groups:
     for: 2h
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Today's test volume is less than 70% of nominal daily volume.
       description: Are machines online? Is data being collected? Is the parser working?
@@ -591,7 +591,7 @@ groups:
     for: 2h
     labels:
       repo: dev-tracker
-      severity: page
+      severity: ticket
     annotations:
       summary: Test data volume today is less than 70% of nominal daily volume.
       description: Are machines online? Is data being collected? Is pusher working?
