--- a/config/federation/alertmanager/config.yml.template
+++ b/config/federation/alertmanager/config.yml.template
@@ -80,7 +80,7 @@ inhibit_rules:
 # platform cluster scrape job is down.
 - source_match:
     alertname: 'PlatformCluster_FederationScrapeJobFailing'
-  taret_match_re:
+  target_match_re:
     alertname: 'PlatformCluster_.+Missing'
   equal: ['cluster']
 
