Try to start busybox again

--- a/k8s/data-processing/deployments/prometheus.yml
+++ b/k8s/data-processing/deployments/prometheus.yml
@@ -81,7 +81,7 @@ spec:
 
       - image: busybox
         name: busybox
-        args: ["sleep 1000"]
+        args: ['bash', '-c', 'sleep 1000']
         volumeMounts:
         - mountPath: /prometheus
           name: prometheus-storage
