--- a/config/federation/grafana/provisioning/datasources/deleted.yml
+++ b/config/federation/grafana/provisioning/datasources/deleted.yml
@@ -2,16 +2,16 @@
 apiVersion: 1
 
 deleteDatasources:
-  - name: "Scraper (mlab-oti)"
+  - name: Scraper (mlab-oti)
     orgId: 1
-  - name: "Scraper (mlab-staging)"
+  - name: Scraper (mlab-staging)
     orgId: 1
-  - name: "Scraper (mlab-sandbox)"
+  - name: Scraper (mlab-sandbox)
     orgId: 1
 
-  - name: "Downloader (mlab-oti)"
+  - name: Downloader (mlab-oti)
     orgId: 1
-  - name: "Downloader (mlab-staging)"
+  - name: Downloader (mlab-staging)
     orgId: 1
-  - name: "Downloader (mlab-sandbox)"
+  - name: Downloader (mlab-sandbox)
     orgId: 1
